# reacton

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  release.md  release.sh
.github/workflows/: codequality.yaml  installation.yml  release.yaml  unittest.yml
benchmarks/: README.md  bench.py  compare.py
benchmarks/results/: baseline.json  cleanroom.json  reacton-orphan-hook.json
docs/: api.md  build.sh  click-button.ipynb  environment.yml  examples.md  getting-started.md  index.md  installing.md  jupyter-lite.json  jupyterlite_config.json  libraries.md  overrides.json  requirements.txt  testing.md  understanding.md  xeus-python-environment.yml
notebooks/: calculator.ipynb  click-button.ipynb  markdown.ipynb  todo-app.ipynb
react_ipywidgets/: __init__.py  bqplot.py  core.py  find.py  find_test.py  generate.py  generate_test.py  ipycanvas.py  ipyvue.py  ipyvuetify.py  ipywidgets.py  logging.py  rx.py  test_core.py  test_rx.py  utils.py  work.py
reacton/: __init__.py  bqplot.py  bqplot_image_gl.py  core.py  core_test.py  display.py  find.py  find_test.py  generate.py  generate_test.py  ipycanvas.py  ipyvue.py  ipyvue_test.py  ipyvuetify.py  ipywidgets.py  logging.py  patch.py  patch_display.py  qt.py  test_rx.py  utils.py  utils_test.py  work.py
reacton/deprecated/: ipyvuetify.py
source/: conf.py  index.rst
