[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "reacton"
authors = [{name = "Maarten A. Breddels", email = "maartenbreddels@gmail.com"}]
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "ipywidgets",
    "typing_extensions >= 4.1.1",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Jupyter",
    "Topic :: Software Development :: User Interfaces",
    "Environment :: Web Environment",
]

[tool.hatch.version]
path = "reacton/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["react_ipywidgets", "reacton"]

[tool.hatch.build.targets.sdist]
packages = ["react_ipywidgets", "reacton"]


[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "mypy",
    "pre-commit",
    "coverage",
    "pytest",
    "pytest-cov",
    "bqplot",
    "numpy",
    "ipyvuetify",
    "bump2version",
    "jinja2",
]

[project.urls]
Home = "https://www.github.com/widgetti/reacton"
Documentation = "https://reacton.solara.dev"
"Source code" = "https://www.github.com/widgetti/reacton"

[tool.black]
line-length = 160

[tool.isort]
profile = "black"
